# fly

./: .clang-format
arch/: Kconfig
arch/gd32/arm/gd32f30x/: CMakeLists.txt  gcc-config.cmake
arch/gd32/arm/gd32f30x/CMSIS/GD/GD32F30x/Include/: gd32f30x.h  system_gd32f30x.h
arch/gd32/arm/gd32f30x/CMSIS/GD/GD32F30x/Source/: system_gd32f30x.c
arch/gd32/arm/gd32f30x/CMSIS/GD/GD32F30x/Source/GCC/: startup_gd32f30x_cl.S  startup_gd32f30x_xd.S
arch/gd32/arm/gd32f30x/GD32F30x_standard_peripheral/Include/: gd32f30x_adc.h  gd32f30x_bkp.h  gd32f30x_can.h  gd32f30x_crc.h  gd32f30x_ctc.h  gd32f30x_dac.h  gd32f30x_dbg.h  gd32f30x_dma.h  gd32f30x_enet.h  gd32f30x_exmc.h  gd32f30x_exti.h  gd32f30x_fmc.h  gd32f30x_fwdgt.h  gd32f30x_gpio.h  gd32f30x_i2c.h  gd32f30x_libopt.h  gd32f30x_misc.h  gd32f30x_pmu.h  gd32f30x_rcu.h  gd32f30x_rtc.h  gd32f30x_sdio.h  gd32f30x_spi.h  gd32f30x_timer.h  gd32f30x_usart.h  gd32f30x_wwdgt.h
arch/gd32/arm/gd32f30x/GD32F30x_standard_peripheral/Source/: gd32f30x_adc.c  gd32f30x_bkp.c  gd32f30x_can.c  gd32f30x_crc.c  gd32f30x_ctc.c  gd32f30x_dac.c  gd32f30x_dbg.c  gd32f30x_dma.c  gd32f30x_enet.c  gd32f30x_exmc.c  gd32f30x_exti.c  gd32f30x_fmc.c  gd32f30x_fwdgt.c  gd32f30x_gpio.c  gd32f30x_i2c.c  gd32f30x_misc.c  gd32f30x_pmu.c  gd32f30x_rcu.c  gd32f30x_rtc.c  gd32f30x_sdio.c  gd32f30x_spi.c  gd32f30x_timer.c  gd32f30x_usart.c  gd32f30x_wwdgt.c
project/: Kconfig
project/gd32f30x/: Kconfig
project/gd32f30x/gd32f303-demo/: CMakeLists.txt  defconfig  gd32f30x_flash.ld
project/gd32f30x/gd32f303-demo/debugconfig/: GD32F30x_HD.svd  ext-cortex-debug-config.json  gd32f30x.cfg  openocd.cfg
project/gd32f30x/gd32f303-demo/inc/: bsp.h  gd32f30x_it.h  main.h  systick.h
project/gd32f30x/gd32f303-demo/src/: SEGGER_RTT_Syscalls_GCC.c  bsp.c  gd32f30x_it.c  main.c  syscalls.c  systick.c
